@@ -1,3 +1,7 @@
+2011-10-25 Roman
+- FIX:DAQ.Siemens: Multi-blocks fragments register is fixed, write blocks.
+
+
 2011-10-24 Maxim
 - FIX:UI.Vision: Connecting the shapes while orthogonal drawing is fixed for the primitive ElFigure.
 
